# dirserve

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
demo/: index.html  more.html  style.css
src/: main.cpp
src/http/: helpers.cpp  helpers.hpp  server.cpp  server.hpp  subserver.cpp  subserver.hpp  transaction.cpp  transaction.hpp
src/logging/: logger.cpp  logger.hpp  severity.cpp  severity.hpp  writer.cpp  writer.hpp
src/threading/: pool.cpp  pool.hpp
src/utils/: fd_guard.cpp  fd_guard.hpp  options.hpp
